--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,11 @@
   </head>
   <body>
     <div ng-app="ngcourse">
-      Hello!
+      <div ng-controller="MainCtrl">
+        Hello, {{username}}!
+        You've got {{numberOfTasks}} tasks.
+        <button ng-click="addTask()">Add task</button>
+      </div>
     </div>
     <script src="/app/app.js"></script>
   </body>
