Change task list to separate functions called in sequence, rather than directly chained. Add user service to get name, though timing is wrong (username not set yet when task list gets and filters).

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/styles.css"/>
     <script src="/app/app.js"></script>    
     <script src="/app/components/main/main-controller.js"></script>
+    <script src="/app/core/users/users-service.js"></script>
     <script src="/app/components/login-form/login-form-controller.js"></script>
     <script src="/app/sections/task-list/task-list-controller.js"></script>
   </head>
