--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,12 @@
   <head>
 
     <script src="/bower_components/angular/angular.js"></script>
+    <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="/bower_components/lodash/dist/lodash.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/styles.css"/>
     <script src="/app/app.js"></script>    
     <script src="/app/components/main/main-controller.js"></script>
+    <script src="/app/core/router/router-service.js"></script>
     <script src="/app/core/users/users-service.js"></script>
     <script src="/app/core/tasks/tasks-service.js"></script>
     <script src="/app/core/server/server-service.js"></script>
@@ -26,7 +29,15 @@
           Hello, {{main.username}}!
         </div>
 
-        <div ng-show="main.isAuthenticated" ng-controller="TaskListCtrl as taskList">
+        <hr>
+
+        <div  ng-show="main.isAuthenticated">
+          <div ui-view></div>
+        </div>
+
+        <hr>
+
+        <!-- <div ng-show="main.isAuthenticated" ng-controller="TaskListCtrl as taskList">
           {{main.username}}, you've got {{taskList.tasks.length}} tasks<br/>
           <table>
             <tr>
@@ -45,7 +56,7 @@
             Enter description: <input type="text" placeholder="description" ng-model="taskList.description"/><br/>
             <button ng-click="taskList.createTask()">Add custom task</button>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     
