--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     <script src="/app/components/main/main-controller.js"></script>
     <script src="/app/core/router/router-service.js"></script>
     <script src="/app/core/users/users-service.js"></script>
+    <script src="/app/core/users/user-directive.js"></script>
     <script src="/app/core/tasks/tasks-service.js"></script>
     <script src="/app/core/server/server-service.js"></script>
     <script src="/app/components/login-form/login-form-controller.js"></script>
@@ -35,6 +36,8 @@
           <div ui-view></div>
         </div>
 
+        <hr>
+        <ngc-user></ngc-user>
         <hr>
 
         <!-- <div ng-show="main.isAuthenticated" ng-controller="TaskListCtrl as taskList">
