--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,9 @@
           Password: <input type="password" ng-model="loginForm.password"/><br/>
           <div ng-show="main.errorMessage">{{main.errorMessage}}</div>
           <button ng-click="main.login(loginForm.username, loginForm.password)">Login</button>
+          <div ng-show="main.error">
+            Error: {{main.error}}!
+          </div>          
         </div>
 
         <div ng-show="main.isAuthenticated">
@@ -37,7 +40,7 @@
         </div>
 
         <hr>
-        <ngc-user></ngc-user>
+        <ngc-user username-alt="Alt Name"></ngc-user>
         <hr>
 
         <!-- <div ng-show="main.isAuthenticated" ng-controller="TaskListCtrl as taskList">
