Build out templating/routing. Solve many problems. This is a bigger diff than I would prefer. Figuring lots of inter-component issues before landing at a stable point.

--- a/client/app/sections/task-list/task-list.html
+++ b/client/app/sections/task-list/task-list.html
@@ -1,5 +1,5 @@
 <div>
-    {{main.userDisplayName}}, we've got {{taskList.tasks.length}} tasks
+    {{taskList.getUserDisplayName(taskList.username)||taskList.username}}, we've got {{taskList.tasks.length}} tasks
     <br/>
 
    
