--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,8 @@
     <script src="/app/core/server/server-service.js"></script>
     <script src="/app/components/login-form/login-form-controller.js"></script>
     <script src="/app/sections/task-list/task-list-controller.js"></script>
+    <script src="/app/sections/task-edit/task-edit-controller.js"></script>
+    <script src="/app/sections/task-add/task-add-controller.js"></script>
   </head>
   <body>
     <div ng-app="ngcourse">
